add more data points for stub

--- a/TODO
+++ b/TODO
@@ -8,7 +8,7 @@ TODO LIST
 5.  Get dur_sankey working for any filepathX.cali
 6.  Make Spot 2 compare button and extract all runIDs/filepathX.cali
 7.  Integrate Spot 2 cali extraction with the new dur_sankey project page.
-8.  Find a way to do in-order sorting.  Is there an option for this?
+8.  Find a way to do in-order sorting.  Investigate: Is there an option for this?
 
 9.  At somepoint, I'll have to get back to Ravel.
 10.  Icons... someday.
