Begin implementation of grabbing the cali keys which will then be sent to the new window.

--- a/TODO
+++ b/TODO
@@ -6,6 +6,8 @@ TODO LIST
 3.  Construct STUB data from CallSpot: spot.py durations2 <filepath1.cali> [filepath2.cali]*
 4.  Get dur_sankey working with the STUB data.
 5.  Get dur_sankey working for any filepathX.cali
+
+Left Off:
 6.  Make Spot 2 compare button and extract all runIDs/filepathX.cali
 7.  Integrate Spot 2 cali extraction with the new dur_sankey project page.
 8.  Find a way to do in-order sorting.  Investigate: Is there an option for this?
