--- a/TODO
+++ b/TODO
@@ -10,6 +10,10 @@ TODO LIST
 Left Off:
 6.  Make Spot 2 compare button and extract all runIDs/filepathX.cali
 7.  Integrate Spot 2 cali extraction with the new dur_sankey project page.
+
+
+
+- default to the new data (not the old one)
 8.  Find a way to do in-order sorting.  Investigate: Is there an option for this?
 
 9.  At somepoint, I'll have to get back to Ravel.
