provide support for passing directory along instead of using default

--- a/TODO
+++ b/TODO
@@ -1,20 +1,29 @@
 TODO LIST
 =================================================
+- default to the new data (not the old one)
+- Pass actual directory, don't use the Stub.
+- Test enhanced Layout
+8.  Find a way to do in-order sorting.  Investigate: Is there an option for this?
 
+9.  At somepoint, I'll have to get back to Ravel.
+10.  Icons... someday.
+
+
+
+https://lc.llnl.gov/spot/dcvis/web/?sf=/usr/gapps/spot/datasets/lulesh2small&layout=/usr/gapps/spot/datasets/enhanced_layout.json
+            var maximal = '/usr/gapps/wf/web/spot/data/lulesh_maximal/';
+
+
+
+
+DONE
 1.  Genericize the CallSpot.js so it can be used in any project
 2.  Enable usage of CallSpot.js from new dur_sankey along with the parameters.
 3.  Construct STUB data from CallSpot: spot.py durations2 <filepath1.cali> [filepath2.cali]*
 4.  Get dur_sankey working with the STUB data.
 5.  Get dur_sankey working for any filepathX.cali
-
-Left Off:
 6.  Make Spot 2 compare button and extract all runIDs/filepathX.cali
 7.  Integrate Spot 2 cali extraction with the new dur_sankey project page.
 
 
 
-- default to the new data (not the old one)
-8.  Find a way to do in-order sorting.  Investigate: Is there an option for this?
-
-9.  At somepoint, I'll have to get back to Ravel.
-10.  Icons... someday.
