--- a/TODO
+++ b/TODO
@@ -1,15 +1,20 @@
 RECENTLY DONE:
 - Allow the person to specify an Endpoint to call, an input box for dan laney.
 - Fixed Title overlapping Graph Bug.
+- A few minor error message modifications.
+- Pass cali_key to ravel page and prep it to be sent to BE.
 
 
 TODO LIST
 =================================================
+- Start providing support for larger MPI files: /g/g0/pascal/lulesh/lulesh_ravel_traces
+- Labels -> instead of the cali key, try specifying the field based on the last sorted field on the spot 2 page.
+- Integration: send cali file run IDs.  this specifies which ravel trace to use by the cali file name.
+    * This Integration won't be possible until we have those files in the proper location with the right cali filenames.
+    * After that, I should be able to just pass in the location of the file with absolute directories: /g/g0/pascal/lulesh/lulesh_ravel_traces/xxxxx.cali
+- Error message: “If you don’t have an account on [whatever the specified machine was], try picking a machine you have access to, like [the current URL]&machine=rzslic,” essentially debugging messages. Low priority, but useful.
 - Host on Both RZ and CZ.
-- Labels
 - Group By.
-- be able to specify which ravel file to get (passing the run_id through)
-- Get Ravel to work with new input files
 - Find a way to do in-order sorting.
     * Investigate: Is there an option for this?
     * Can we specify a sort function?
