Refactor ajax interface to allow for more parameters, in preparation for command option
Former-commit-id: b752c1cf25d22ea604698386eb4e9dfa12c53283

--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 RECENTLY DONE:
 - Updated some documentation
-- Send project manager the Documentation.
+- Send Tammy the Documentation.
 
 
 TODO LIST
