Set proper defaults
Former-commit-id: 0c2191688b33d97a1e65eb3e959a67ed19244d05

--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@ RECENTLY DONE:
 - Updated some documentation
 - Send Tammy the Documentation.
 - Refactor ajax interface to allow for more parameters, in preparation for command option
-- Allow them to specify command.
+- Allow them to specify command dynamically in URL.
 
 
 TODO LIST
