x-label and y-label CSS and HTML implementation of labels as well as routing for it.
Former-commit-id: b570a60bb0fccec6e49339317a58d5b127708a10

--- a/TODO
+++ b/TODO
@@ -14,7 +14,7 @@ RECENTLY DONE:
 
 TODO LIST
 =================================================
-- Labels for X and Y (units and labels)
+- Labels for X and Y
 - Units.
 - Fix X Axis:
     * https://lc.llnl.gov/spot/dcvis/web/?sf=/usr/gapps/spot/datasets/lulesh2small&layout=/usr/gapps/spot/datasets/enhanced_layout.json&BarChart1=3,11
