--- a/TODO
+++ b/TODO
@@ -14,7 +14,19 @@ RECENTLY DONE:
 
 TODO LIST
 =================================================
-- Labels for X and Y
+- DONE: Labels for X and Y
+- DONE: Got MPI working on CZ.
+- DONE for figure of Merit try to round down.
+- replace "willEmailYou ToComplain" with "pascal", filler0 (matt) and filler1 (david)
+- 1e7, 1e8 abbreviations for Num of Iterations.
+- Bar Charts different colors for each one.
+- Fix last selectable?
+
+- specific spot.py not working for david -> at compare button (look into)
+
+- buckets.
+
+
 - Units.
 - Fix X Axis:
     * https://lc.llnl.gov/spot/dcvis/web/?sf=/usr/gapps/spot/datasets/lulesh2small&layout=/usr/gapps/spot/datasets/enhanced_layout.json&BarChart1=3,11
