--- a/TODO
+++ b/TODO
@@ -16,11 +16,12 @@ TODO LIST
 =================================================
 - DONE: Labels for X and Y
 - DONE: Got MPI working on CZ.
+
 - DONE for figure of Merit try to round down.
-- replace "willEmailYou ToComplain" with "pascal", filler0 (matt) and filler1 (david)
+- DONE replace "willEmailYou ToComplain" with "pascal", filler0 (matt) and filler1 (david)
 - 1e7, 1e8 abbreviations for Num of Iterations.
 - Bar Charts different colors for each one.
-- Fix last selectable?
+- Fix last bar selectable?
 
 - specific spot.py not working for david -> at compare button (look into)
 
