--- a/TODO
+++ b/TODO
@@ -19,7 +19,7 @@ TODO LIST
 
 - DONE for figure of Merit try to round down.
 - DONE replace "willEmailYou ToComplain" with "pascal", filler0 (matt) and filler1 (david)
-- 1e7, 1e8 abbreviations for Num of Iterations.
+- DONE 1e7, 1e8 abbreviations for Num of Iterations.
 - Bar Charts different colors for each one.
 - Fix last bar selectable?
 
