--- a/TODO
+++ b/TODO
@@ -1,4 +1,22 @@
 RECENTLY DONE:
+- DONE: Labels for X and Y
+- DONE for figure of Merit try to round down.
+- DONE replace "willEmailYou ToComplain" with "pascal", filler0 (matt) and filler1 (david)
+- DONE 1e7, 1e8 abbreviations for Num of Iterations.
+- DONE Fixed Title
+- DONE y ticks, x ticks
+- DONEish buckets.  Needs more testing and shake down.
+- Bar Charts different colors for each one.
+
+
+
+TODO:
+Debug:
+http://localhost:8888/web/?sf=/g/g0/pascal/spot_lulesh_dataset/lulesh_data&layout=/g/g0/pascal/spot_lulesh_dataset/layout.json
+    * It would appear that somehow the X-scale is not being set correctly for some reason.
+
+
+RECENTLY DONE:
 - Updated some documentation
 - Send Tammy the Documentation.
 - Refactor ajax interface to allow for more parameters, in preparation for command option
@@ -14,20 +32,14 @@ RECENTLY DONE:
 
 TODO LIST
 =================================================
-- DONE: Labels for X and Y
 - DONE: Got MPI working on CZ.
 
-- DONE for figure of Merit try to round down.
-- DONE replace "willEmailYou ToComplain" with "pascal", filler0 (matt) and filler1 (david)
-- DONE 1e7, 1e8 abbreviations for Num of Iterations.
-- DONE Fixed Title
-- DONE y ticks, x ticks
-- Bar Charts different colors for each one.
 - Fix last bar selectable?
 
 - specific spot.py not working for david -> at compare button (look into)
+- why does table not reflect data/what's in the charts?
 
-- buckets.
+- may 3rd is David Poliakoff's last day
 
 
 - Units.
