styling for dropdowns for the compare button selects
Former-commit-id: d0e2489b98c3122f011bc524f94017c7a1786de5

--- a/TODO
+++ b/TODO
@@ -4,13 +4,14 @@
 - DONE Table Sorting bug, fix this. -> this is because the first letter is capitalized, so when it goes to sort, it doesn't recognize the string.
     * prevent dc.js auto capitalize?
 
-1. Get Date Data and make sure it shows up in spot2 and spot1
-2. Drop downs for xAxis and GroupBy
-3. Send XAxis and GroupBy to spot1
-4. Receive XAxis and GroupBy on spot1
+- DONE 1. Get Date Data and make sure it shows up in spot2 and spot1
+- DONE 2. Drop downs for xAxis and GroupBy
+- DONE 3. Send XAxis and GroupBy to spot1
+- DONE 4. Receive XAxis and GroupBy on spot1
 5. on spot1 use those 2 to populate the page.
 6. when dropdowns are selected, update the URL
-7. bookmark button on spot2 page that adds "exe_compare=1" to URL.
+7. when URL has xaxis and groupby propogate them to the select drop down.
+8. bookmark button on spot2 page that adds "exe_compare=1" to URL.
 
 Later on: Be able to graph X-axis of less than 1 int width.
 
